fix rendering issue on mobile with grid

--- a/app/assets/stylesheets/about_me.scss
+++ b/app/assets/stylesheets/about_me.scss
@@ -116,15 +116,15 @@ a.nav-links:hover {
   }
 
   #about-me-blurb{
-    font-size: 1em;
+    font-size: 1.4em;
     text-align: center;
     grid-column: 2;
     grid-row: 1;
-    line-height: 2em;
+    line-height: 1.5em;
   }
 
   #about-me-nav {
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
     grid-row: 2;
     display: grid;
     grid-template-columns: auto auto auto;
