--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -24,13 +24,13 @@
   width: 90%;
   border-radius: 5px;
   background-color: #fff;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.15);
   transition: all 0.2s ease-in-out;
 }
 
 .project-card:hover {
   transform: scale(1.05, 1.05);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -58,7 +58,7 @@
 @media only screen and (max-width: 767px) {
   #projects-container {
     grid-template-columns: auto;
-    grid-template-rows: auto 20px;
+    grid-template-rows: repeat(7, 1fr) 20px;
     place-items: center;
   }
   .project-card {
@@ -81,5 +81,33 @@
     font-size: 1.2em;
     grid-column: 2;
     grid-row: 3;
+  }
+
+  .mobile-row-1 {
+    grid-row: 1;
+  }
+
+  .mobile-row-2 {
+    grid-row: 2;
+  }
+
+  .mobile-row-3 {
+    grid-row: 3;
+  }
+
+  .mobile-row-4 {
+    grid-row: 4;
+  }
+
+  .mobile-row-5 {
+    grid-row: 5;
+  }
+
+  .mobile-row-6 {
+    grid-row: 6;
+  }
+
+  .mobile-row-7 {
+    grid-row: 7;
   }
 }
